--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <script src="index.js"></script>
-    <button id="voiceButtonId">voice</button>
+    <button id="voiceButtonId">line</button>
     <button id="choirButtonId">choir</button>
 </body>
 </html>
