seed random, url param

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
-<head>
-    <title></title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
-<body>
-    <script src="index.js"></script>
-    <button id="voiceButtonId">line</button>
-    <button id="choirButtonId">choir</button>
-</body>
+    <head>
+        <title>Pop</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    </head>
+    <body>
+        <script src="index.js"></script>
+        <input type="text" id="seedId" name="seedName" value="" />
+        <br>
+        <button id="voiceButtonId">line</button>
+        <br>
+        <button id="choirButtonId">choir</button>
+    </body>
 </html>
